modification lien vers csv

--- a/Projet 4 - Restaurant customers satisfaction /restaurant_customers_satisfaction.ipynb
+++ b/Projet 4 - Restaurant customers satisfaction /restaurant_customers_satisfaction.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Import DataBase from local import\n",
     "\n",
-    "df = pd.read_csv('/Users/um/Desktop/Data_Analyst_Portfolio/Projet 4 - Restaurant customers satisfaction /restaurant_customer_satisfaction.csv')"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/UlrichMakindi/Data_Analyst_Portfolio/refs/heads/main/Projet%204%20-%20Restaurant%20customers%20satisfaction%20/restaurant_customer_satisfaction.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "4              2           3               5                 0  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "HighSatisfaction          0.000000      0.000000       0.000000       1.000000  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
